@@ -1,3 +1,9 @@
+2006-11-18  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* src/cpufreq-prefs.c: 
+
+	Never return a cpu number higher than max cpu. Fixes bug #376621.
+
 2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* help/C/cpufreq-applet.xml: Fix the build.
